--- a/package.json
+++ b/package.json
@@ -2,9 +2,16 @@
   "name": "@QimatLuo/rxjs",
   "version": "1.0.0",
   "description": "My RxJS utilities",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.js",
+  "files": [
+    "dist"
+  ],
   "scripts": {
+    "build": "rimraf dist && tsc",
     "format": "prettier --write .",
+    "prepack": "npm run build",
+    "prepublish": "npm run build",
     "test": "jest --watch"
   },
   "repository": {
