--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/QimatLuo/rxjs#readme",
   "devDependencies": {
+    "@tsconfig/node18": "^1.0.1",
     "@types/jest": "^29.2.2",
     "jest": "^29.3.1",
     "prettier": "^2.7.1",
