--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   ],
   "scripts": {
     "build": "rimraf dist && tsc",
-    "format": "prettier --write .",
+    "format": "prettier --write . --ignore-path .gitignore",
     "prepack": "npm run build",
     "prepublish": "npm run build",
     "test": "jest --watch"
